S3588106: changes for get MP and post mid searches